<resources>
    <string name="app_name">Afrokash</string>
    <string name="app_name_test">Afrokash测试版</string>
    <string name="login_title">The best loan experience starts here, quick, easy, no hidden fee</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="please_enter_phone_number">Please enter your mobile number</string>
    <string name="login_register_apply">Login/Register to Apply</string>
    <string name="please_read_all">Please read all the &#60;Privacy Policy&#62; carefully.</string>
    <string name="register">Register</string>
    <string name="dears_234_x">Dears 234 %s</string>
    <string name="ussd">USSD</string>
    <string name="sms">SMS</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="set_up_digit_password">Set up a 6-digit password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="get_code">Get Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="resend_sms_desc">Re-send the \n code in %ss</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="forget_password">Forgot password？</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="i_agree_to">I agree to the  &#60;Privacy Policy&#62;and &#60;Terms and Conditions&#62;</string>
    <string name="request_permission_sms_title">Sms</string>
    <string name="request_permission_sms_desc">Collect and monitor only financial transaction text messages including the name of the transaction party. The purpose is to conduct a credit risk assessment of the transaction and the description of the transaction amount. This credit risk assessment speeds up loan disbursement without any My Account text messages being deleted, read or collected</string>
    <string name="request_permission_location_title">Location</string>
    <string name="request_permission_location_desc">Collect and monitor only financial transaction text messages including the name of the transaction party. The purpose is to conduct a credit risk assessment of the transaction and the description of the transaction amount. This credit risk assessment speeds up loan disbursement without any My Account text messages being deleted, read or collected</string>
    <string name="request_permission_camera_title">Camera</string>
    <string name="request_permission_camera_desc">Use a camera to capture documents and/or photos required for the application and assessment process. We upload and transmit the content of the camera to a secure network environment on our server( https://tz.chosenpaysa.com).</string>
    <string name="request_permission_phone_data_title">Collection of mobile phone data</string>
    <string name="request_permission_phone_data_desc">Collect and monitor specific information about your device, including name, model, region,language, identifiers, hardware and software information, status, usage habits, unique identifiers (such as IMEI and serial numbers). It is only used to identify your device and to ensure that it cannot be used without your authorization and to prevent fraud. In addition, we will collect a detailed list of your installed applications to assess your borrowing propensity and debt situation, we will upload the collected data to our highly secure server APP NAME ( https://tz.chosenpaysa.com ),</string>
    <string name="reject">Reject</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="setting_information">Edit Information</string>
    <string name="setting_customer_service">Customer Service</string>
    <string name="setting_history_record">Historical Record</string>
    <string name="setting_privacy">Notice of Privacy</string>
    <string name="setting_term_condition">Terms and Conditions</string>
    <string name="setting_version">Version</string>
    <string name="setting_debug">Debug</string>
    <string name="setting_share">share</string>
    <string name="under_review">Under Review</string>
    <string name="we_are_currently_verifying">We are currently verifying your loan details. The results will be available soon.</string>
    <string name="loan_in_progress">Loan in progress</string>
    <string name="loan_in_progress_desc">We are processing your loan disbursement, you should receive the fund in 2 hours, Thanks for your patience.</string>
    <string name="the_reason_for_failure">The reason for the failure of loan issuance may be that your receiving account information is incorrect or other reason. Please check it and reapply again later.</string>
    <string name="disbursement_fail">Disbursement failed</string>
    <string name="update_account">Update Account</string>
    <string name="the_system_detect_that">The system detects that your  bank account information is incorrect, please check and modify it.</string>
    <string name="sorry">Sorry</string>
    <string name="order_number">Order Number:</string>
    <string name="pending_repayment">Pending Repayment</string>
    <string name="repayment">Repayment</string>
    <string name="repayment_detail">Repayment Details</string>
    <string name="str_validate_num_input_hint"> please enter your SMS Code</string>
    <string name="str_login_phone_error"> please enter your correct phone number</string>
    <string name="str_login_password_error"> please enter your correct password</string>
    <string name="str_Illegal_verification_code">Illegal verification code</string>
    <string name="permission">Permission</string>
    <string name="request_permission_desc">Hi there, to access your eligibility and facilitate faster disbursal of your loan, we need these permissions</string>
    <string name="information_collection_and_use">Information Collection and Use</string>
    <string name="for_a_better_experience"> For a better experience, when using our services, we may ask you to provide us with certain personally identifiable information. The information requested will remain on your device and we will not collect it in any way.The app does use third-party services that may collect information that can be used to identify you.</string>
    <string name="repayment_time">Repayment time</string>
    <string name="due_amount">Due amount</string>
    <string name="loan_amount">Loan amount</string>
    <string name="loan_amount_cap">Loan Amount</string>
    <string name="Interest">Interest</string>
    <string name="late_payment_fee">Late Payment Fee</string>
    <string name="service_fee">Service Fee</string>
    <string name="amount_of_reduction">Amount of reduction</string>
    <string name="overdue_x_days">Overdue</string>
    <string name="your_loan_x_day">Your loan is overdue. Please repay it as soon as possible to avoid affecting your credit report. If you deliberately default, you will bear legal responsibility and litigation costs.</string>
    <string name="you_have_success_repaid">You have successfully repaid!</string>
    <string name="loan_again">Loan Again</string>
    <string name="repayment_again">Repayment Again</string>
    <string name="you_repayment_current_process">Your repayment is currently being processed, please be patient and wait</string>
    <string name="refresh">Refresh</string>
    <string name="basic_information">Basic Information</string>
    <string name="please_fill_in">Please fill in</string>
    <string name="please_chosse">Please choose</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="bvn">BVN</string>
    <string name="do_not_know_bvn">Don\'t know my BVN</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="level_of_education">Level of Education</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="optional">(Optional)</string>
    <string name="edit_information">Edit Information</string>
    <string name="work_information">Work Information</string>
    <string name="contact_information">Contact Information</string>
    <string name="bank_information">Bank Information</string>
    <string name="receive_account">Receiving account</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="employment">Employment</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="position">Position</string>
    <string name="pay_period">Pay Period</string>
    <string name="do_you_have_any_outstand">Do you have any outstanding loans on other credit platforms?</string>
    <string name="company_name">Company Name</string>
    <string name="company_phone_number">Company Phone number</string>
    <string name="company_address">Company Address</string>
    <string name="contact">Contact</string>
    <string name="emergency_contact_1">Emergency contact 1</string>
    <string name="emergency_contact_2">Emergency contact 2</string>
    <string name="relationship">Relationship</string>
    <string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="name">Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_list">Bank List</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="confirm_bank_account_number">Confirm Bank Account Number</string>
    <string name="please_fill_correct_bank_account">Please fill in the correct bank account number to ensure that you can receive the funds</string>
    <string name="max_amount">Maximum Amount</string>
    <string name="apply_now">Apply Now</string>
    <string name="high_loan_amount">High loan amount</string>
    <string name="multi_term_loan">Multi-term loans</string>
    <string name="up_to_day">Up to %s days</string>
    <string name="repayment_term">Repayment Term</string>
    <string name="loan_term">Loan Term</string>
    <string name="disburse_fees">Disburse&amp; Fees</string>
    <string name="disbursal_amount">Disbursal Amount</string>
    <string name="interest">Interest</string>
    <string name="processing_fee">Processing Fee</string>
    <string name="repayment_schedule">Repayment Schedule</string>
    <string name="due_day">Due day</string>
    <string name="confirm">Confirm</string>
    <string name="x_days">%sdays</string>
    <string name="logout">Logout</string>
    <string name="your_application_failed">Your application failed</string>
    <string name="reason_for_rejection"> Reasons for rejection may be: \n-The information you provided is incorrect\n-Your face recognition is unclear\n-Your information requires further review</string>
    <string name="consumer_hotline">Consumer Hotline</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="the_facial_recognition">The facial recognition feature verifies your identity. Please ensure that you are performing the operation yourself.</string>
    <string name="face_recognition_to_auth">Face recognition to authenticate</string>
    <string name="please_face_screen">Please face the screen and keep your face \nin the frame</string>
    <string name="please_note">Please note</string>
    <string name="do_not_wear_a_hat">.  Do not wear a hat.</string>
    <string name="ensure_the_screen">.  Ensure the screen is well-lit.</string>
    <string name="do_not_wear_sunglasses">.  Do not wear sunglasses.</string>
    <string name="confirm_that_you_are">.  Confirm that you are performing the operation yourself.</string>
    <string name="start_x_s" formatted="false">Start(%sS)</string>
</resources>