<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@drawable/bg_loan_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dp10"
        android:layout_marginVertical="@dimen/dp10"
        android:background="@drawable/bg_white_bg_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp13"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:layout_marginStart="@dimen/dp13"
                    android:src="@drawable/ic_edit_work_1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp6"
                    android:text="@string/work_information"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.chocolate.nigerialoanapp.widget.InfoSelectView
                android:id="@+id/select_employment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp18"
                app:edit_view_title="@string/employment" />

            <com.chocolate.nigerialoanapp.widget.InfoSelectView
                android:id="@+id/select_monthly_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                app:edit_view_title="@string/monthly_income" />

            <com.chocolate.nigerialoanapp.widget.InfoSelectView
                android:id="@+id/select_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                app:edit_view_title="@string/position" />

            <com.chocolate.nigerialoanapp.widget.InfoSelectView
                android:id="@+id/select_pay_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                app:edit_view_title="@string/pay_period" />

            <com.chocolate.nigerialoanapp.widget.InfoSelectView
                android:id="@+id/select_has_other_outstand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                app:edit_view_title="@string/do_you_have_any_outstand"
                app:edit_view_title_line="2" />

            <com.chocolate.nigerialoanapp.widget.InfoEditView
                android:id="@+id/edit_company_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp66"
                android:layout_marginTop="@dimen/dp8"
                app:edit_view_optional="true"
                app:edit_view_title="@string/company_name" />

            <com.chocolate.nigerialoanapp.widget.InfoEditView
                android:id="@+id/edit_company_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                app:edit_view_optional="true"
                app:edit_view_title="@string/company_phone_number" />

            <com.chocolate.nigerialoanapp.widget.InfoEditView
                android:id="@+id/edit_company_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                app:edit_view_optional="true"
                app:edit_view_title="@string/company_address" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_edit_basic_next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:layout_marginHorizontal="@dimen/dp20"
                android:layout_marginTop="@dimen/dp13"
                android:background="@drawable/selector_btn_theme"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="#242424"
                android:textStyle="bold"
                android:textSize="@dimen/sp16" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_work_next_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp45"
                android:gravity="center"
                android:text="@string/please_read_all"
                android:textSize="@dimen/sp14" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>