<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_bg_10"
    tools:showIn="@layout/fragment_edit_face_recognition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/ic_auth_1">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp54"
                android:layout_marginEnd="@dimen/dp5"
                android:gravity="center_vertical"
                android:text="@string/the_facial_recognition"
                android:textColor="#0C9814"
                android:textSize="@dimen/sp12" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp13"
            android:layout_marginTop="@dimen/dp20"
            android:includeFontPadding="false"
            android:text="@string/face_recognition_to_auth"
            android:textColor="#333333"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp13"
            android:layout_marginTop="@dimen/dp16"
            android:includeFontPadding="false"
            android:text="@string/please_face_screen"
            android:textColor="#666666"
            android:textSize="@dimen/sp12" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_photo"
            android:layout_width="@dimen/dp90"
            android:layout_height="@dimen/dp90"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp20"
            android:src="@drawable/ic_face_recognitaion" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_marginTop="@dimen/dp40"
            android:background="@drawable/bg_green_bg_2"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp21"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/please_note"
                android:textColor="#333333"
                android:textSize="@dimen/sp16"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp21"
                android:layout_marginTop="@dimen/dp6"
                android:includeFontPadding="false"
                android:text="@string/do_not_wear_a_hat"
                android:textColor="#666666"
                android:textSize="@dimen/sp12" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp21"
                android:layout_marginTop="@dimen/dp6"
                android:includeFontPadding="false"
                android:text="@string/ensure_the_screen"
                android:textColor="#666666"
                android:textSize="@dimen/sp12" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp21"
                android:layout_marginTop="@dimen/dp6"
                android:includeFontPadding="false"
                android:text="@string/do_not_wear_sunglasses"
                android:textColor="#666666"
                android:textSize="@dimen/sp12" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp21"
                android:layout_marginTop="@dimen/dp6"
                android:layout_marginBottom="@dimen/dp21"
                android:includeFontPadding="false"
                android:text="@string/confirm_that_you_are"
                android:textColor="#666666"
                android:textSize="@dimen/sp12" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_face_recognition_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginHorizontal="@dimen/dp40"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/selector_btn_theme"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/start_x_s"
            android:textColor="@color/white"
            android:textSize="@dimen/sp17" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_face_recognition_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:layout_marginBottom="@dimen/dp45"
            android:gravity="center"
            android:text="@string/please_read_all"
            android:textColor="#333333"
            android:textSize="@dimen/sp14"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>